COBRA model extraction stubs. Not working. :(